✨💥 Add GetLockById endpoint and  change urls to /locks instead of /lock
