# src/Unlocked.Api/Endpoints/Models/LockStatus.cs
@@ -1,0 +1,8 @@
+namespace Unlocked.Api.Endpoints.Models;
+
+internal enum LockStatus
+{
+    Locked,
+    Unlocked,
+    Unknown
+}
