# src/Unlocked.Api/Endpoints/PostLockByIdUnlock.cs
@@ -5,6 +5,8 @@ using Asp.Versioning;
 using Microsoft.AspNetCore.Http.HttpResults;
 using Microsoft.AspNetCore.Mvc;
 
+using Unlocked.Api.Endpoints.Models;
+
 namespace Unlocked.Api.Endpoints;
 
 internal static class PostLockByIdUnlock
@@ -12,12 +14,12 @@ internal static class PostLockByIdUnlock
     internal static void MapPostLockByIdUnlock(this IEndpointRouteBuilder routes)
     {
         routes
-            .MapPost("lock/unlock", HandlerV1)
+            .MapPost("locks/unlock", HandlerV1)
             .HasDeprecatedApiVersion(new ApiVersion(1))
             .WithName("UnlockV1");
 
         routes
-            .MapPost("lock/{lockId:guid}/unlock", HandlerV2)
+            .MapPost("locks/{lockId:guid}/unlock", HandlerV2)
             .HasApiVersion(new ApiVersion(2))
             .WithName("UnlockV2");
     }
@@ -36,13 +38,6 @@ internal static class PostLockByIdUnlock
     internal class UnlockResponse
     {
         public required LockStatus Status { get; set; }
-    }
-
-    internal enum LockStatus
-    {
-        Locked,
-        Unlocked,
-        Unknown
     }
 
     private static async Task<Results<Ok<UnlockResponse>, NotFound, ProblemHttpResult>> HandlerV1(
