# src/Unlocked.Api/openapi_v2.json
@@ -15,7 +15,7 @@
     }
   ],
   "paths": {
-    "/lock/{lockId}/unlock": {
+    "/locks/{lockId}/unlock": {
       "post": {
         "tags": [
           "PostLockByIdUnlock"
@@ -98,10 +98,98 @@
           }
         }
       }
+    },
+    "/locks/{lockId}": {
+      "get": {
+        "tags": [
+          "GetLockById"
+        ],
+        "parameters": [
+          {
+            "name": "lockId",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string",
+              "format": "uuid"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/LockItem"
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "Bad Request",
+            "content": {
+              "application/problem+json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ProblemDetails"
+                }
+              }
+            }
+          },
+          "401": {
+            "description": "Unauthorized",
+            "content": {
+              "application/problem+json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ProblemDetails"
+                }
+              }
+            }
+          },
+          "403": {
+            "description": "Forbidden",
+            "content": {
+              "application/problem+json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ProblemDetails"
+                }
+              }
+            }
+          },
+          "404": {
+            "description": "Not Found",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ProblemDetails"
+                }
+              }
+            }
+          },
+          "500": {
+            "description": "Internal Server Error",
+            "content": {
+              "application/problem+json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ProblemDetails"
+                }
+              }
+            }
+          }
+        }
+      }
     }
   },
   "components": {
     "schemas": {
+      "LockItem": {
+        "type": "object",
+        "properties": {
+          "status": {
+            "$ref": "#/components/schemas/LockStatus"
+          }
+        }
+      },
       "LockStatus": {
         "enum": [
           "locked",
@@ -176,6 +264,9 @@
   "tags": [
     {
       "name": "PostLockByIdUnlock"
+    },
+    {
+      "name": "GetLockById"
     }
   ]
 }
